added the authentication endpoints
