# src/main/java/com/example/new_aggregator/controller/UsersController.java
@@ -17,8 +17,6 @@ public class UsersController
     @Autowired
     private UserService userService;
     
-    @Autowired
-    private AuthenticationService authenticationService;
     
     /**
      * Registers a new user.
@@ -41,28 +39,5 @@ public class UsersController
     {
         UserDto user = userService.fetchUser();
         return new ResponseEntity<>(new ResponseDto<>(ResponseStatus.SUCCESS, user),HttpStatus.OK);
-    }
-    
-    /**
-     * Updates the authenticated user's details.
-     * @param userDto UserDto containing updated user details.
-     * @return ResponseEntity containing ResponseDto with UserDto and HTTP status OK.
-     */
-    @PostMapping("/users/login")
-    public ResponseEntity<ResponseDto<String>> loginUser(@RequestBody UserDto userDto)
-    {
-        String token = authenticationService.loginUser(userDto);
-        return new ResponseEntity<>(new ResponseDto<>(ResponseStatus.SUCCESS, token), HttpStatus.OK);
-    }
-    
-    /**
-     * Logs out the authenticated user.
-     * @return ResponseEntity containing ResponseDto with success message and HTTP status OK.
-     */
-    @PostMapping("/users/logout")
-    public ResponseEntity<ResponseDto<String>> logoutUser()
-    {
-        authenticationService.logoutUser();
-        return new ResponseEntity<>(new ResponseDto<>(ResponseStatus.SUCCESS, "User logged out successfully"), HttpStatus.OK);
     }
 }
